letter spacing fix

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -495,7 +495,7 @@ $screen-xl-max: 1200px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-    h1, h4, a{color:white; display: block; text-shadow: 2px 2px 2px black; letter-spacing: .3rem; font-family: 'Oswald';  
+    h1, h4, a{color:white; display: block; text-shadow: 2px 2px 2px black; letter-spacing: .1rem; font-family: 'Oswald';  
       }
     
     div:nth-child(2) {
